# spotifypp

./: CMakeLists.txt  README.md  main.cpp
include/: CommandHandler.h  SpotifyClient.h
src/: CMakeLists.txt  CommandHandler.cpp  SpotifyClient.cpp  main.cpp
